noinst_LTLIBRARIES = libscaler.la

libscaler_la_SOURCES = yuv2rgb.c \
		       yuv2rgb.h \
		       yuvscaler.c \
		       yuvscaler.h \
		       blitter.c \
		       blitter.h \
		       draw_rect.c \
		       draw_rect.h \
		       yuv2argb_scaler.c \
		       yuv2argb_scaler.h

INCLUDES = -I$(top_srcdir)/include 
