dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([ps3fb], [0.1], [gary@gnu.org])

AM_INIT_AUTOMAKE([0.1 foreign])

AC_PROG_CC
#AM_PROG_LEX
#AC_PROG_YACC
AC_PROG_RANLIB

#check for headers
AC_HEADER_STDC
AC_CHECK_HEADERS(linux/fb.h linux/kd.h sys/ioctl.h sys/mman.h  fcntl.h)
AC_CHECK_HEADERS([ps3fb.h],HAVE_PS3FB_H=1,CPPFLAGS="$CPPFLAGS -Iasm-powerpc" )
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
